[package]
name            = "runn"
version         = "0.1.0"
edition         = "2021"

# ── CRATE METADATA ───────────────────────────────────────────────────────────────
authors         = ["Okay Aslan <https://github.com/okayasl>"]
description     = "Runn is a feature-rich, easy-to-use library for building, training, and evaluating feed-forward neural networks in Rust"
license         = "MIT OR Apache-2.0"
repository      = "https://github.com/okayasl/runn"
readme          = "README.md"
homepage        = "https://github.com/okayasl/runn"
documentation   = "https://docs.rs/runn"
keywords        = ["neural-network", "machine-learning", "rust", "deep-learning"]
categories      = ["science", "algorithms", "data-structures"]
exclude         = [".github/*", "screenshots/*", "docs/*"]

# ── DEPENDENCIES ───────────────────────────────────────────────────────────────────
[dependencies]
nalgebra             = { version = "0.33", features = ["serde-serialize"] }
log                  = "0.4"
env_logger           = "0.11.8"
rand                 = "0.9.1"
rand_distr           = "0.5.1"
serde                = { version = "1.0", features = ["derive"] }
serde_json           = "1.0"
rmp-serde            = "1.3.0"
typetag              = "0.2"
special              = "0.11.3"
csv                  = "1.1"
tempfile             = "3.19.1"
crossbeam-channel    = "0.5.15"
thiserror            = "2"
prost                = "0.13.5"
prost-types          = "0.13.5"
crc                  = "3.3.0"

# ── COMPILATION PROFILES ─────────────────────────────────────────────────────────
[profile.release]
opt-level = 3   # Maximum optimization :contentReference[oaicite:21]{index=21}
lto       = true
debug     = false

# ── BADGES ────────────────────────────────────────────────────────────
[badges]
github-actions = { repository = "okayasl/runn", workflow = "CI" }

# ── EXAMPLES ─────────────────────────────────────────────────────────────────────
[[example]]
name = "triplets"
path = "examples/triplets/triplets.rs"

[[example]]
name = "iris"
path = "examples/iris/iris.rs"

[[example]]
name = "wine"
path = "examples/wine/wine.rs"

[[example]]
name = "energy_efficiency"
path = "examples/energy_efficiency/energy_efficiency.rs"
